--- a/pgweb_config.ini
+++ b/pgweb_config.ini
@@ -2,8 +2,8 @@
 url = http://www.pigai.org/
 user = 16733208014
 password = 16733208014
-paper_code = 1781476
-class = 赵日海2018A班
+paper_code = 1798460
+class = 初一(3)班
 
 title = .\\NeuBase\\title.txt
 contents = .\\NeuBase\\TrashTalk.txt
